Cleaning up virtual time management.